apps/fm-app/k8s/overlays/cloud/ingress_old.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fm-app-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.apegpt.ai
      http:
        paths:
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fm-app-svc
                port:
                  number: 8080
